--- a/.gitignore
+++ b/.gitignore
@@ -26,35 +26,20 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-# Conda окружения обычно не в проекте, но на всякий случай
 conda_env/
 ortho_env/
 ortho_analyzer_env/
-# ... добавьте имя вашего conda окружения, если оно другое
 
-# --- Данные и Результаты ---
-# ВАЖНО: Исключаем папки с потенциально большими данными и результатами ODM
-data/input_images/*
-!data/input_images/.gitkeep # Позволяет сохранить пустую папку в Git
-data/output/*
-!data/output/.gitkeep
-data/output/odm_processing/*
-!data/output/odm_processing/.gitkeep
-
-# Исключаем большие модели (лучше использовать Git LFS или хранить отдельно)
+# Исключаем большие модели
 models/*.pt
 models/*.pth
 models/*.h5
 models/*.onnx
 models/*.engine
 models/*.pb
-# Оставляем возможность добавить маленькие файлы моделей или текстовые описания
 !models/.gitkeep
 !models/*.txt
 !models/*.md
-
-# Исключаем большие файлы разметки
-# data/parking_layout/*.json # Раскомментируйте, если JSON очень большой
 
 # --- IDE / Редакторы ---
 .vscode/
@@ -70,7 +55,6 @@ Thumbs.db # Windows
 *.swp
 *.swo
 
-# Если вы создадите файл для ключей API или паролей
 # .secrets
 # secrets.yaml
 # *.env
